@@ -1,56 +1,80 @@
 package com.project.shopapp.controllers;
 
-import com.project.shopapp.dtos.CategoryDTO;
+import com.project.shopapp.components.LocalizationUtils;
+import com.project.shopapp.dtos.*;
 import com.project.shopapp.models.Category;
+import com.project.shopapp.responses.CategoryResponse;
+import com.project.shopapp.responses.UpdateCategoryResponse;
 import com.project.shopapp.services.CategoryService;
+import com.project.shopapp.utils.MessageKeys;
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.context.MessageSource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.LocaleResolver;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Locale;
 
 @RestController
 @RequestMapping("${api.prefix}/categories")
+//@Validated
+//Dependency Injection
 @RequiredArgsConstructor
 public class CategoryController {
-
     private final CategoryService categoryService;
+    private final LocaleResolver localeResolver;
+    private final MessageSource messageSource;
+    private final LocalizationUtils localizationUtils;
 
     @PostMapping("")
-    public ResponseEntity<?> createCategory(@Valid @RequestBody CategoryDTO categoryDTO, BindingResult result) {
-        if (result.hasErrors()) {
-            List<String> errorMessages = result.getFieldErrors().stream()
+    //Nếu tham số truyền vào là 1 object thì sao ? => Data Transfer Object = Request Object
+    public ResponseEntity<CategoryResponse> createCategory(
+            @Valid @RequestBody CategoryDTO categoryDTO,
+            BindingResult result) {
+        CategoryResponse categoryResponse = new CategoryResponse();
+        if(result.hasErrors()) {
+            List<String> errorMessages = result.getFieldErrors()
+                    .stream()
                     .map(FieldError::getDefaultMessage)
-                    .collect(Collectors.toList());
-            return ResponseEntity.badRequest().body(errorMessages);
+                    .toList();
+            categoryResponse.setMessage(localizationUtils.getLocalizedMessage(MessageKeys.INSERT_CATEGORY_FAILED));
+            categoryResponse.setErrors(errorMessages);
+            return ResponseEntity.badRequest().body(categoryResponse);
         }
-        categoryService.createCategory(categoryDTO);
-        return ResponseEntity.ok("Create category successfully");
+        Category category = categoryService.createCategory(categoryDTO);
+        categoryResponse.setCategory(category);
+        return ResponseEntity.ok(categoryResponse);
     }
+
+    //Hiện tất cả các categories
     @GetMapping("")
-    public ResponseEntity<List<Category>> getAllCategories(@RequestParam("page") int page, @RequestParam("limit") int limit) {
+    public ResponseEntity<List<Category>> getAllCategories(
+            @RequestParam("page")     int page,
+            @RequestParam("limit")    int limit
+    ) {
         List<Category> categories = categoryService.getAllCategories();
         return ResponseEntity.ok(categories);
     }
 
-
-
     @PutMapping("/{id}")
-    public ResponseEntity<String> updateCategory(@PathVariable long id, @Valid @RequestBody CategoryDTO categoryDTO) {
-
+    public ResponseEntity<UpdateCategoryResponse> updateCategory(
+            @PathVariable Long id,
+            @Valid @RequestBody CategoryDTO categoryDTO
+    ) {
+        UpdateCategoryResponse updateCategoryResponse = new UpdateCategoryResponse();
         categoryService.updateCategory(id, categoryDTO);
-        return ResponseEntity.ok("Update category succefully");
+        updateCategoryResponse.setMessage(localizationUtils.getLocalizedMessage(MessageKeys.UPDATE_CATEGORY_SUCCESSFULLY));
+        return ResponseEntity.ok(updateCategoryResponse);
     }
-
     @DeleteMapping("/{id}")
-    public ResponseEntity<String> deleteCategory(@PathVariable long id) {
-
+    public ResponseEntity<String> deleteCategory(@PathVariable Long id) {
         categoryService.deleteCategory(id);
-
-        return ResponseEntity.ok("Delete category with id: " + id);
+        return ResponseEntity.ok(localizationUtils.getLocalizedMessage(MessageKeys.DELETE_CATEGORY_SUCCESSFULLY));
     }
 }
+
